--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,10 @@
 server:
   port: 8080
 
+
 spring:
+  config:
+    import: "classpath:jwt.yml"
   datasource:
     url: jdbc:postgresql://172.30.1.94:5400/smart_ware
     username: postgres
